--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     compile group: 'cz.msebera.android' , name: 'httpclient' , version: '4.4.1.2'
     compile group: 'cz.msebera.android' , name: 'httpclient', version: '4.4.1.1'
     compile 'com.loopj.android:android-async-http:1.4.9'
+    compile 'com.android.volley:volley:1.0.0'
 }
